# vagrant-nomad-consul

./: .gitignore  Makefile  README.md  Vagrantfile  Vagrantfile.j2  generate.py
ansible/: README.md  vagrant.yml
ansible/inventory/vagrant/: hosts
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: hosts.j2
ansible/roles/consul/files/: consul.env  consul.service
ansible/roles/consul/tasks/: main.yml
ansible/roles/consul/templates/: client.json.j2  server.json.j2
ansible/roles/dnsmasq/files/: 10-consul.conf  dnsmasq.conf  resolv.conf
ansible/roles/dnsmasq/tasks/: main.yml
ansible/roles/docker/files/: config.json
ansible/roles/docker/tasks/: main.yml
ansible/roles/nomad/files/: nomad.env  nomad.service
ansible/roles/nomad/tasks/: main.yml
ansible/roles/nomad/templates/: nomad.hcl.j2
ansible/roles/podman/tasks/: main.yml
ansible/vars/: vars.yml
apps/gotooling/: Makefile  go.mod  go.sum
apps/rustooling/: Cargo.toml
apps/rustooling/src/: lib.rs  vagrant.rs
conf/dnsmasq.d/: 00-consul.conf
docker/: Makefile
docker/openssl/: Dockerfile
docker/postgres/: Dockerfile
docker/postgres/data/: pg_hba.conf  postgresql.conf
jobs/: grafana.hcl  ingress.hcl  postgres-ha.hcl  prometheus.hcl  registry.hcl
jobs/includes/: patroni.yaml  postgres-exporter.yaml  prometheus.yml  prometheus.yml.bak  registry.yml
jobs/metrics/: node-exporter.hcl
jobs/tmp/: redis.hcl
scripts/: README.md  certs.sh  consul-kv.sh  consul.env  generate-certs.sh  nomad.env  reset-consul.sh
scripts/certs/: ca.sh
tls/: .gitignore
(+14 files in other folders)
